# voicechat

./: CMakeLists.txt
gui/: CMakeLists.txt
gui/ui/: mainwindow.ui
gui/ui/include/: mainwindow.h  voiceclient.h
gui/ui/src/: main.cpp  mainwindow.cpp  voiceclient.cpp
include/: asio_network.hpp  audio_device.hpp  audio_interface.hpp  network_interface.hpp  opus_codec.hpp  voice_client.hpp  voice_server.hpp
proto/: CMakeLists.txt  voice_message.proto
src/: CMakeLists.txt  asio_network.cpp  audio_device.cpp  opus_codec.cpp  voice_client.cpp  voice_server.cpp
src/client/: main.cpp
src/server/: main.cpp
test/: test.sh  test_commands.txt  test_main_channel.sh
